--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -17,7 +17,7 @@
                                    <i class="fas fa-dollar-sign" style="margin-left: 10px;font-size: 30px;height: 30px;vertical-align: middle;"></i>
                                 </div>      
                                 <div class="media-body ">
-                                    <h2>568120</h2>
+                                    <h2 class="counter-count">50</h2>
                                     <p class="m-b-0">wszystkich pryszniców</p>
                                 </div>
                             </div>
@@ -32,7 +32,7 @@
                                    <i class="fas fa-tint" style="margin-left: 10px;font-size: 30px;height: 30px;vertical-align: middle;"></i>
                                 </div>      
                                 <div class="media-body ">
-                                    <h2>568120</h2>
+                                    <h2 class="counter-count">568</h2>
                                     <p class="m-b-0">zużycie wody</p>
                                 </div>
                             </div>
@@ -47,7 +47,7 @@
                                    <i class="fas fa-stopwatch" style="margin-left: 10px;font-size: 30px;height: 30px;vertical-align: middle;"></i>
                                 </div>      
                                 <div class="media-body ">
-                                    <h2>568120</h2>
+                                    <h2 class="counter-count">12</h2>
                                     <p class="m-b-0">wszystkich prysznców</p>
                                 </div>
                             </div>
@@ -62,7 +62,7 @@
                                    <i class="fas fa-shower" style="margin-left: 10px;font-size: 30px;height: 30px;vertical-align: middle;"></i>
                                 </div>      
                                 <div class="media-body ">
-                                    <h2>568120</h2>
+                                    <h2 class="counter-count" >20</h2>
                                     <p class="m-b-0">wszystkich pryszniców</p>
                                 </div>
                             </div>
@@ -75,17 +75,23 @@
   </div>
 
 
+
+
+<div class="row">
+<div class="container-fluid" style="padding-right: 50px; padding-left: 50px;margin-top: 50px;">
   
- <div class="row">
-          <div class="col-lg-12">
-<canvas id="lineChart"></canvas>
+<div class="card mb-3">
+        <div class="card-header" style="font-size:2em;">
+          <i class="fa fa-area-chart" style="color:Tomato;" ></i> Wykres </div>
+        <div class="card-body">
+          <canvas id="lineChart" width="100%" height="30"></canvas>
+        </div>
+        <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
 
 <script type=text/javascript src="{{url_for('static', filename='js/chart2.js') }}"></script>
-          </div>
-        </div>
-
-
-
+      </div>
+  </div>
+</div>
 
 
  <div class="row">
@@ -98,7 +104,7 @@
                                     <div role="progressbar" style="width: 85%; height:8px;" class="progress-bar bg-danger wow animated progress-animated"> <span class="sr-only">60% Complete</span> </div>
                                 </div>
 
-                                <p class="m-t-30 f-w-600">Ile kosztuje twój prysznic<span class="pull-right">90%</span></p>
+                                <p class="m-t-30 f-w-600">Ile kosztuje twój prysznic<span class="pull-right" class="counter-count">90%</span></p>
                                 <div class="progress">
                                     <div role="progressbar" style="width: 90%; height:8px;" class="progress-bar bg-info wow animated progress-animated"> <span class="sr-only">60% Complete</span> </div>
                                 </div>
