--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <div class="col-sm" style="height: 100%">panel głowny
+
+
+  <div class="col-sm" style="height: 100%">
 <div class="content-wrapper ">
     <div class="container-fluid">
       <!-- Breadcrumbs-->
