--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,50 +18,58 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
   <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>  
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 
   
 </head>
 
 <body>
-  <div style="height: 100vh;">
+  <div style="height: 100%;">
+
+<nav class="navbar navbar-dark bg-primary justify-content-between">
+  <a class="navbar-brand" href="{{ url_for('index') }}">Panel Główny</a>
+
+  <form class="form-inline">
+    <a class="navbar-brand text-center" href="{{ url_for('user') }}">Witaj,{{user_c}}</a>
+      <a class="nav-link active" href="{{ url_for('logout') }}"> <button type="button" class="btn btn-warning">Wyloguj</button></a>
+  </form>
+</nav>
 
 
+<div class="container-fluid">
 
+    <div class="row " style="width: 100%;height: 200%">
+       <div class="col-lg-2 navbar-dark bg-dark" >
+        <br>
+      <ul class="nav nav-pills nav-stacked ">
 
-<div class="row no-gutter">
-  <div class="col-sm-2" ><nav class="navbar navbar-expand-lg navbar-dark bg-dark" id="mainNav"><center>
-    <a class="navbar-brand" href="index.html">  Panel Główny</a></center>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  </nav></div>
-  <div class="col-sm-10"><nav class="navbar navbar-expand-lg navbar-dark bg-primary" id="mainNav">
-    <a class="navbar-brand" href="index.html">Panel Głównsssy</a>
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  </nav></div>
+     <li> <a class="nav-link " href="{{ url_for('index') }}"> <i class="fa fa-fw fa-dashboard" style="color:Tomato"></i> Strona główna</a></li>
+     <li> <a class="nav-link " href="{{ url_for('user') }}"> <i class=" fa fa-male" style="color:Tomato"></i> Zarządzanie osobami/danymi</a></li>
+     <li>  <a class="nav-link " href="{{ url_for('yourStats') }}"> <i class="fa fa-tint" style="color:Tomato"></i> Twój profil</a></li>
+ <li><li> <a class="nav-link disabled" href="waterConsumption.html"> <i class=" fa fa-bathtub" style="color:Tomato"></i> Zużycie wody</a></li>
+ <li> <a class="nav-link "href="{{ url_for('allData') }}"><i class="fa fa-line-chart" style="color:Tomato"></i> Statystyki</a></li>
+ <li> <a class="nav-link disabled" href="#"> <i class=" fa fa-wrench" style="color:Tomato"></i> Opcje dodatkowe</a></li>
+ <li> <a class="nav-link " href="{{ url_for('logout') }}"> <i class="fa fa-fw fa-sign-out" style="color:Tomato"></i> Wyloguj</a></li>
+      </ul>
+    </div>
+
+    <div class="col-lg-10 mr-0" style="height: 100%;width: 100%;">
+     {% block content %}{% endblock %}
+    </div>
+     
+  </div>
 </div>
-<div class="row no-gutter" style="height: 100%; text-align: center;">
-  <div class="col-sm-2"><nav class="nav flex-column navbar-dark bg-dark navleft" style="height: 100%;">
-  <a class="nav-link active" href="{{ url_for('index') }}"> <i class="fa fa-fw fa-dashboard" style="color:Tomato"></i> Strona główna</a>
-  <a class="nav-link active" href="{{ url_for('user') }}"> <i class=" fa fa-male" style="color:Tomato"></i> Zarządzanie osobami</a>
-  <a class="nav-link active" href="{{ url_for('yourStats') }}"> <i class="fa fa-tint" style="color:Tomato"></i> Twój profil</a>
-  <a class="nav-link active" href="waterConsumption.html"> <i class=" fa fa-bathtub" style="color:Tomato"></i> Zużycie wody</a>
-  <a class="nav-link active"href="{{ url_for('allData') }}"><i class="fa fa-line-chart" style="color:Tomato"></i> Wykresy</a>
-  <a class="nav-link disabled" href="#"> <i class=" fa fa-wrench" style="color:Tomato"></i> Opcje dodatkowe</a>
-  <a class="nav-link active" href="{{ url_for('logout') }}"> <i class="fa fa-fw fa-sign-out" style="color:Tomato"></i> Wyloguj</a>
-</nav></div>  
+
+</div>
 
 
-  <div class="col-sm" style="height: 100%">
-{% block content %}{% endblock %}
-</div>
-</div>
+
 
 </body>
     
-<script type=text/javascript src="{{url_for('static', filename='js/chart.js') }}"></script>
+<script type=text/javascript src="{{url_for('static', filename='js/chart.js') }}" async></script>
 
 
 </html>
